外部ファイル

--- a/index.html
+++ b/index.html
@@ -16,23 +16,7 @@
   <script src="node_modules/video.js/dist/video.min.js"></script>
   <script src="node_modules/videojs-contrib-media-sources/dist/videojs-contrib-media-sources.min.js"></script>
   <script src="node_modules/videojs-contrib-hls/dist/videojs-contrib-hls.min.js"></script>
-  <script type="text/javascript">
-
-    var player = videojs("test", {
-      html5: {
-        hls: {
-          withCredentials: true
-        }
-      },
-      flash: {
-        hls: {
-          withCredentials: true
-        }
-      }
-    });
-    player.play();
-
-  </script>
+  <script src="app.js" async></script>
 </body>
 
 </html>
